// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<UserAvatar /> with avatarLarge 1`] = `
.c0 {
  box-sizing: border-box;
  border-radius: 50%;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  overflow: hidden;
  font-size: 12px;
  width: 24px;
  height: 24px;
}

.c1 {
  width: 100%;
  height: 100%;
  object-fit: cover;
}

@media (min-width:569px) {
  .c0 {
    font-size: 16px;
    width: 44px;
    height: 44px;
  }
}

<span
  className="c0"
>
  <img
    alt=""
    className="c1"
    src="http://via.placeholder.com/350x150"
  />
</span>
`;

exports[`<UserAvatar /> with avatarLarge and large variant 1`] = `
.c0 {
  box-sizing: border-box;
  border-radius: 50%;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  overflow: hidden;
  font-size: 25px;
  width: 88px;
  height: 88px;
}

.c1 {
  width: 100%;
  height: 100%;
  object-fit: cover;
}

<span
  className="c0"
>
  <img
    alt=""
    className="c1"
    src="http://via.placeholder.com/350x150"
  />
</span>
`;

exports[`<UserAvatar /> with avatarLarge and medium variant 1`] = `
.c0 {
  box-sizing: border-box;
  border-radius: 50%;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  overflow: hidden;
  font-size: 23px;
  width: 52px;
  height: 52px;
}

.c1 {
  width: 100%;
  height: 100%;
  object-fit: cover;
}

<span
  className="c0"
>
  <img
    alt=""
    className="c1"
    src="http://via.placeholder.com/350x150"
  />
</span>
`;

exports[`<UserAvatar /> with name 1`] = `
.c0 {
  box-sizing: border-box;
  border-radius: 50%;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  overflow: hidden;
  border: 2px solid #8C64CB;
  color: #8C64CB;
  -webkit-text-transform: capitalize;
  text-transform: capitalize;
  -webkit-text-align: center;
  text-align: center;
  font-weight: 700;
  font-size: 12px;
  width: 24px;
  height: 24px;
}

@media (min-width:569px) {
  .c0 {
    font-size: 16px;
    width: 44px;
    height: 44px;
  }
}

<span
  className="c0"
>
  B
</span>
`;

exports[`<UserAvatar /> with name and large variant 1`] = `
.c0 {
  box-sizing: border-box;
  border-radius: 50%;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  overflow: hidden;
  border: 2px solid #8C64CB;
  color: #8C64CB;
  -webkit-text-transform: capitalize;
  text-transform: capitalize;
  -webkit-text-align: center;
  text-align: center;
  font-weight: 700;
  font-size: 25px;
  width: 88px;
  height: 88px;
}

<span
  className="c0"
>
  B
</span>
`;

exports[`<UserAvatar /> with name and medium variant 1`] = `
.c0 {
  box-sizing: border-box;
  border-radius: 50%;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  overflow: hidden;
  border: 2px solid #8C64CB;
  color: #8C64CB;
  -webkit-text-transform: capitalize;
  text-transform: capitalize;
  -webkit-text-align: center;
  text-align: center;
  font-weight: 700;
  font-size: 23px;
  width: 52px;
  height: 52px;
}

<span
  className="c0"
>
  B
</span>
`;
